gcc/testsuite/g++.dg/other/anon-union4.C
// PR c++/64644

static union { };  // { dg-error "anonymous union with no members" }
